# learning-python

./: .gitignore  pyproject.toml  python_argparse.py  requirements.txt  tasks.py
azure/: list-resource-group.py  requirements.txt
example-flask/: .env  README.md  main.py  pyproject.toml
examples/: class-attrs.py  class.py  client-httpx.py  command-line-fire.py  debugger-in-runtime.py  dependency_injection.py  myfunc.py  progress-bars.py  python-argparse.py  string-transformation.py  string_transformer.py
learning-peewee/: database_model.py  example.py
requests-async/: run.py
thread-pool-executor/: run.py
